# name

./: .gitignore  Cargo.toml  Makefile  MyCheatsheet.md  README.md  ReadMe.md  mips_as.sh  mips_test.asm  package-lock.json  package.json
.artifacts/: mips_test.asm  mips_test.out
LukesNotes/: wtfamIdoing.md
logo/: brick_pattern.psd  logo.psd
media/: main.js  vscode.css
mock_debug/src/: activateMockDebug.ts  extension.ts
name-as/: Cargo.toml  Makefile  diff_name_mars.sh
name-as/.artifacts/: Fibonacci.asm  SysCalls.asm  mips_test.asm  mips_test.out  test.asm
name-as/configs/: default.toml  mips-linux-gnu-as.toml
name-as/src/: args.rs  config.rs  lineinfo.rs  main.rs  nma.rs  parser.rs  preprocess.rs
name-const/: Cargo.toml
name-const/src/: lib.rs  lineinfo.rs
name-emu/: Cargo.toml  testinput.txt
name-emu/src/: exception.rs  lineinfo.rs  main.rs  mips.rs  syscall.rs
name-ext/: CHANGELOG.md  ReadMe.md  package.json
name-ext/src/: HelloWorldPanel.ts  activateMockDebug.ts  activateNameDebug.ts  extension.ts  web-extension.ts
name-fmt/: CHANGELOG.md  README.md  package-lock.json  package.json
name-fmt/src/: extension.ts
src/: HelloWorldPanel.ts  activateMockDebug.ts  activateNameDebug.ts  bitmapDisplay.ts  config.rs  extension.ts  main.rs  memoryTable.ts  mips.rs  nma.rs  u5.rs  u6.rs
src/nma/: nma.rs
