[package]
name = "name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
name_const = { version = "0.1.0", path = "../name-const" }
thiserror = "1.0.48"
dap = "0.4.1-alpha1"
base64 = "0.21.4"
byteorder = "1.4.3"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
elf = "0.7.3"